Fixes #355 by restoring a z-index

--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -13,6 +13,7 @@
 	background-size: 100%;
 	background-image: linear-gradient(@start, @end);
 	transition: opacity @timing-animation-hover, box-shadow (@timing-animation-hover / 2);
+	z-index: 0;
 
 	&:before {
 		position: absolute;
